<resources>
    <string name="app_name">CarbonCalculator</string>
    <string name="menuAboutButton">ABOUT</string>
    <string name="menuShare">Share</string>
    <string name="menuCalculatorButton">CALCULATOR</string>
    <string name="menuWelcomeMessage">Welcome to the Green Food Challenge!</string>
    <string name="menuAboutDescription">Click here to learn more about\nthe challenge! -></string>
    <string name="menuCalculatorDescription">Click here to learn more about\nthe impact of your diet! -></string>
    <string name="aboutQuitButton">Menu</string>
    <string name="aboutNextPageButton">Next</string>
    <string name="aboutPreviousPageButton">Prev</string>
    <string name="aboutPage1">PAGE 1</string>
    <string name="aboutOverviewTitle">Overview</string>
    <string name="aboutOverviewText">
        As part of the Greenest City Action Plan, Vancouver aims to be the greenest city in the
        world by 2020. One way the city plans to achieve this is by reducing its carbon footprint
        by 33% relative to their 2006 footprint. This app is developed to help users track and
        reduce their carbon footprint in Vancouver.
    </string>
    <string name="aboutFootprintTitle">What is a carbon footprint?</string>
    <string name="aboutFootprintText">
        A carbon footprint refers to the emission of various carbon compounds as a result from using
        or producing products. These emissions contribute toward the greenhouse effect and is measured
        in CO2e (CO2 equivalents). To put Vancouver’s plan in perspective, in 2015, Metro Vancouver’s
        emissions ranged between 6-8 tonnes CO2e per capita, compared to the global sustainable goal
        of reaching 2 tonnes CO2e per capita by 2050.
    </string>
    <string name="aboutPage2">PAGE 2</string>
    <string name="aboutContributionTitle">What contributes to greenhouse gases?</string>
    <string name="aboutContributionText">
        The top two contributing factors for greenhouse gases emissions come from transportation and
        electricity, both sourcing energy by burning fossil fuel. Other major emission sources include
        buildings, food, and consumables and waste.
    </string>
    <string name="aboutEmissionsSource">Source: Vancouver EcoCity Footprint Tool</string>
    <string name="aboutPage3">PAGE 3</string>
    <string name="aboutReductionTitle">What can be done to reduce emissions?</string>
    <string name="aboutReductionText">
        Instead of driving, people can opt to carpool or take transit to reduce fossil fuel consumption.
        Switching from gas to electric whether it be in cars or in heating systems can help as well.
        The carbon emission cost of red meats is significantly higher than white meat, so a change in
        diet will reduce your footprint.
    </string>
    <string name="aboutImpactTitle">Carbon Impact on food</string>
    <string name="aboutImpactText1">
        The reason the two red meats, lamb and beef, have such a high carbon footprint is due to
        the animals’ ability to expel a lot of methane gas from digestion. The gas byproduct from
        cows and lambs comprise 85% of all total methane emissions.\nRead more here:
        https://ec.europa.eu/info/news/eu-agricultural-outlook-european-emissions-linked-agriculture-set-decrease-2030_en
    </string>
    <string name="aboutPage4">PAGE 4</string>
    <string name="aboutImpactText2">
        Below is a chart comparing CO2e production cost of various foods. 90% of Vancouverites in
        the Metro Vancouver area eat  foods high in CO2e. Simply by cutting out red meat consumption
        and replacing it with chicken, as well as reducing total daily meat intake from 35% to 10%,
        can cut down about 1 million tonnes of CO2e per year.
    </string>
    <string name="aboutCO2eCostsSource">Source: https://ec.europa.eu/info/news/eu-agricultural-outlook-european-emissions-linked-agriculture-set-decrease-2030_en</string>
    <string name="aboutPage5">PAGE 5</string>
    <string name="aboutChallengeTitle">Green Food Challenge</string>
    <string name="aboutChallengeText">
        Our challenge is to have participants install our application and to better understand the
        impact their diet has on carbon emissions, as well as discover how dietary changes can reduce
        their carbon footprint.\nIn this app, users track their current meals and their CO2e costs.
        As they transition to more “green meals”, users can observe how many tonnes of CO2e is reduced
        in their footprint as well if everyone in their community made the same changes. Users can
        also share and recommend “low carbon” meals to others in an effort to spread the sustainability movement.
    </string>
    <string name="next">Continue </string>
    <string name="co2e1">Your diet produces \u0020</string>
    <string name="co2e2">\u0020 kg of CO2e per year. </string>
    <string name="toContinue"> continue </string>
    <string name="userUnderstandingTitle">  If everyone in Vancouver had the same diet as you, %1$s %2$s %3$s</string>
    <string name="userUnderstandingTitleUnderAverage">  the reduction in CO2e produced would be equivalent to taking</string>
    <string name="userUnderstandingTitleOverAverage">  the amount of extra CO2e produced would be equivalent to putting</string>
    <string name="userUnderstandingUnderAverage">  thousand cars off the road</string>
    <string name="userUnderstandingOverAverage">  thousand cars on the road</string>
    <string name="barChartTitle"> CO2e from Food (tonnes)</string>
    <string name="calorie_intro">Enter your daily calorie intake!  If you are not sure, <b>press the switch and
            fill in the fields</b> for an estimated average.</string>
    <string name="checkBox_male">Male</string>
    <string name="checkBox_female">Female</string>
    <string name="checkBox_young">18-29</string>
    <string name="checkBox_adult">30-49</string>
    <string name="checkBox_older">50-59</string>
    <string name="checkBox_senior">60 and above</string>
    <string name="calorie_weight">Weight:</string>
    <string name="calorie_calorie">Calories:</string>
    <string name="calorie_height">Height:</string>
    <string name="button_continue">Continue</string>
    <string name="text_activity_level">Choose your level of activity</string>
    <string name="text_lazy">Little to no exercise</string>
    <string name="text_light">Lightly active</string>
    <string name="text_moderately">Moderately active</string>
    <string name="text_super_active">Very active</string>
    <string name="mealCompare1">Your meal is\u0020</string>
    <string name="mealCompare2">\u0020<b>tonnes</b>\u0020</string>
    <string name="mealCompare3">then the average person living in Vancouver!\u0020</string>
    <string name="mealLower">lower\u0020</string>
    <string name="mealHigher">higher\u0020</string>
    <string name="overAverage">Check out our savings calculator and try out our diet plans to see how you can save more.</string>
    <string name="underAverage">Keep up the good work and we will reach our goal in no time!</string>
    <string name="calcIntro">By percentage, what was the intake of your meal today?</string>
    <string name="percentLeft">%</string>
    <string name="calc_rMeat">Red Meat</string>
    <string name="calc_poultry">Poultry</string>
    <string name="calc_seafood">Seafood</string>
    <string name="calc_dairy">Dairy</string>
    <string name="calc_grain">Grains</string>
    <string name="calc_fruit">Fruit</string>
    <string name="food_beef">Beef</string>
    <string name="food_pork">Pork</string>
    <string name="food_chicken">Chicken</string>
    <string name="food_fish">Fish</string>
    <string name="food_eggs">Eggs</string>
    <string name="food_beans">Beans</string>
    <string name="food_vegetables">Vegetables</string>
    <string name="food_brocolli">Brocolli</string>
    <string name="food_tofu">Tofu</string>
    <string name="food_turkey">Turkey</string>
    <string name="food_egg">Egg</string>
    <string name="food_lentils">Lentils</string>
    <string name="food_rice">Rice</string>
    <string name="food_salmon">Salmon</string>
    <string name="saving_calculator_description">Slide to see how you can minimize your food carbon footprint.</string>
    <string name="saving_calculator_result">You would save %1$s kg of CO2e in a year with this meal plan. </string>
    <string name="proportions_title">Proportions (%) </string>
    <string name="total_display">Amount Remaining: </string>
    <string name="total_condition">Total percentage must be 100%</string>
    <string name="cal_display">Daily Cal:</string>
    <string name="button_back">Back</string>
    <string name="button_clear">Clear</string>
    <string name="button_calc">Calculate</string>
    <string name="title_activity_about_swipe">AboutSwipeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">testActivity</string>
    <string name="addPledge">Add a Pledge </string>
    <string name="saveCarbon">Enter kg of Carbon you\'d like to save per year: </string>
    <string name="nav_home">Home</string>
    <string name="nav_calculator">Calculator</string>
    <string name="nav_pledges">Profile</string>
    <string name="welcome_message">Hi, welcome!</string>
    <string name="pledge_title">Pledges</string>
    <string name="pledge_page_title">View All Pledges</string>
    <string name="viewPledgeTotalPledgeTitle">Total Pledges</string>
    <string name="viewPledgeAvgCO2eTitle">Avg CO2 / Person</string>
    <string name="viewPledgeTotalSavedTitle">CO2e Tonnes Saved</string>
    <string name="viewPledgePledgeListTitle">Everyone\'s Pledges</string>
    <string name="txtViewPledgeFilter">Filter By:</string>
    <string name="viewPledgeUserUnderstanding1">Our Total Carbon Savings is Equivalent to Removing</string>
    <string name="viewPledgeUserUnderstanding2">Cars Off the Road!</string>
    <string name="login">Log in</string>
    <string name="loginGoogle">Log in with Google</string>
    <string name="welcomeLogin">WELCOME BACK</string>
    <string name="viewMealsPageTitle">View All Meals</string>
    <string name="diet_meat_eater">For the Meat-Eater, over half of what you eat will consist of poultry, with most of the emphasis being on chicken as it has the lower carbon footprint compared to most meats .
        This diet is great for those who are looking to transition away from red meats, and potentially start the Low-Meat diet.</string>
    <string name="diet_low_meat">The Low-Meat diet completely cuts out red meat, and reduces carbohydrates with the increased intake of more vegetables and tofu.
        This diet is also great for people who are looking to lose weight. Possible mix-ups to this diet would be have fish instead of chicken, and to eat fruit instead of beans.</string>
    <string name="diet_vegetarian">A Vegetarian diet consists of no meat from any animals, leans towards tofu for protein, and has an intake of mostly vegetables. Compared to the other diets, this one has the highest
    proportion intake for beans, as beans has the lowest carbon footprint out of all vegetables. Possible mix-ups to this diet would be to reduce your tofu intake to 30%, to allow you to have a fruit intake of 10%.</string>
    <string name="diet_vegan">A Vegan diet consumes no animal by-product, and like a vegetarian diet consists of eating vegetables and tofu. The main difference from this diet and a vegan diet is the intake of lentils, which has the lowest carbon footprint of most manufactured foods.
        This diet has the best possible savings to your CO2e.</string>
</resources>