<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="16dp"
        android:text="@string/aboutQuitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:drawableRight="@drawable/arrow_right"
        android:id="@+id/btnNextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/aboutNextPageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:drawableLeft="@drawable/arrow_left"
        android:id="@+id/btnPreviousPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/aboutPreviousPageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/aboutPage1"
        app:layout_constraintBottom_toTopOf="@+id/btnQuit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtOverviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/aboutOverviewTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtOverviewDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOverviewDescription"
        android:layout_width="338dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/aboutOverviewText"
        app:layout_constraintBottom_toTopOf="@+id/txtFootprintTitle"
        app:layout_constraintStart_toStartOf="@+id/txtOverviewTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFootprintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/aboutFootprintTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtFootprintDescription"
        app:layout_constraintStart_toStartOf="@+id/txtFootprintDescription"
        app:layout_constraintTop_toBottomOf="@+id/txtOverviewDescription" />

    <TextView
        android:id="@+id/txtFootprintDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="119dp"
        android:text="@string/aboutFootprintText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFootprintTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>